# openspec-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  ralph-implement.sh
openspec/: config.yaml
openspec/changes/archive/2026-03-03-add-nix-flake/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-03-add-readme/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-03-tui-change-viewer/: design.md  proposal.md  tasks.md
openspec/changes/batch-implementation-runner/: design.md  proposal.md  tasks.md
openspec/changes/change-local-implementation-log/: proposal.md  tasks.md
openspec/changes/enrich-runner-prompt/: design.md
openspec/changes/implementation-stall-detection/: design.md  proposal.md  tasks.md
openspec/changes/injectable-config-path/: design.md  proposal.md  tasks.md
openspec/changes/interactive-tool-launch/: design.md  proposal.md  tasks.md
openspec/changes/post-implementation-hook/: dependencies.yaml  design.md  proposal.md  tasks.md
openspec/changes/run-finished-command/: design.md  proposal.md  tasks.md
openspec/changes/selectable-run-mode/: design.md  proposal.md  tasks.md
openspec/changes/tui-refresh-views/: design.md  proposal.md  tasks.md
openspec/changes/view-archived-changes/: design.md  tasks.md
openspec/specs/artifact-content-view/: spec.md
openspec/specs/config-screen/: spec.md
openspec/specs/cross-platform-command/: spec.md
openspec/specs/markdown-rendering/: spec.md
openspec/specs/nix-dev-environment/: spec.md
src/: app.rs  config.rs  data.rs  main.rs  runner.rs  ui.rs
(+69 files in other folders)
