[package]
name = "openspec-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-markdown = { version = "0.3.7", features = ["highlight-code"] }
chrono = "0.4"
serde_yaml = "0.9"
tempfile = "3"

[dev-dependencies]
